--- a/PokedexClient/Views/Pokemon/Index.cshtml
+++ b/PokedexClient/Views/Pokemon/Index.cshtml
@@ -2,8 +2,8 @@
   Layout = "_Layout";
 }
 
-@using Pokedex.Models;
-@model List<Pokedex.Models.Pokemon>;
+@using PokedexClient.Models;
+@model List<PokedexClient.Models.Pokemon>;
 
 <h1>All Pokemon</h1>
 <hr/>
