add changes to pokedex api to remove standard get route that was broken
Co-authored-by: Taylor Phillips <taylorphillips133@gmail.com>
Co-authored-by: aesadin <aesadin@gmail.com>
Co-authored-by: Tristan Emmerson <tristan@stickerslug.com>
Co-authored-by: NoelKirkland <noelkirkland@gmail.com>
Co-authored-by: Shawn Lunsford <lunsford.sk@gmail.com>

--- a/PokedexClient/Views/Shared/_Layout.cshtml
+++ b/PokedexClient/Views/Shared/_Layout.cshtml
@@ -22,7 +22,7 @@
             <a class="nav-link" href="/Pokemon">Pokemon</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/PokeTypes">PokeTypes</a>
+            <a class="nav-link" href="/PokeTypes">Types</a>
           </li>
         </ul>
       </div>
@@ -40,8 +40,8 @@
         </div>
       </div>
     </div>
-    @* <div id="footer">
+    <div id="footer">
       @Html.Partial("Footer")
-    </div> *@
+    </div>
   </body>
 </html>
