--- a/PokedexClient/wwwroot/css/styles.css
+++ b/PokedexClient/wwwroot/css/styles.css
@@ -5,11 +5,27 @@ body {
 }
 
 .nav {
-  background-color: rgba(245, 245, 245, 0.75);
+  /* background-color: rgba(245, 245, 245, 0.75); */
+  padding: 0;
   font-family: 'Arial';
+  text-shadow: 0px 1px 1px rgba(255, 255, 255, 0.75)
+}
+
+div#footer {
+  position: fixed;
+  bottom: 0px;
+  left: 0px;
+  width: 100%;
+  /* background: rgba(245, 245, 245, 0.55); */
+  padding: 0.1px;
+  text-align: center;
+  color: whitesmoke;
 }
 
 h1  {
   color: whitesmoke;
   text-shadow: 0px 1px 1px rgba(0, 0, 0, 0.75)
+}
+li  {
+  color: black;
 }
