--- a/PokedexClient/Views/Shared/_Layout.cshtml
+++ b/PokedexClient/Views/Shared/_Layout.cshtml
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>Pokedex</title>
     <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css'>
+    <link href="https://fonts.googleapis.com/css2?family=Yeseva+One&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="~/css/styles.css">
   </head>
   <body>
@@ -31,9 +32,13 @@
       <div class="row">
         <div class="col-md-3">
         </div>
-        <div class="col-md-5">
+        <div class="col-md-5 scroll">
           <div class="container">
-            @RenderBody()
+            <div class="card">
+              <div class="card-body">
+                @RenderBody()
+              </div>
+            </div>
           </div>
         </div>
         <div class="col-md-3">
