--- a/PokedexClient/wwwroot/css/styles.css
+++ b/PokedexClient/wwwroot/css/styles.css
@@ -3,12 +3,22 @@ body {
   background-repeat: no-repeat;
   background-size: cover;
 }
-
+/* .scroll {
+  max-height: 100px;
+  overflow-y: scroll;
+} */
 .nav {
   /* background-color: rgba(245, 245, 245, 0.75); */
   padding: 0;
   font-family: 'Arial';
   text-shadow: 0px 1px 1px rgba(255, 255, 255, 0.75)
+}
+.card {
+  margin-top: 3%;
+  margin-bottom: 3%;
+  padding: 2%;
+  background-color: rgba(245, 245, 245, 0.75);
+  border-radius: 10px;
 }
 
 div#footer {
@@ -23,8 +33,9 @@ div#footer {
 }
 
 h1  {
-  color: whitesmoke;
-  text-shadow: 0px 1px 1px rgba(0, 0, 0, 0.75)
+  font-family: 'Yeseva One', cursive;
+  color: rgb(218, 0, 0);
+  text-shadow: 0px 1px 2px rgb(0, 0, 0)
 }
 li  {
   color: black;
