--- a/PokedexClient/Views/Shared/_Layout.cshtml
+++ b/PokedexClient/Views/Shared/_Layout.cshtml
@@ -32,7 +32,7 @@
       <div class="row">
         <div class="col-md-3">
         </div>
-        <div class="col-md-5 scroll">
+        <div class="col-md-5">
           <div class="container">
             <div class="card">
               <div class="card-body">
