--- a/PokedexClient/Views/Pokemon/Index.cshtml
+++ b/PokedexClient/Views/Pokemon/Index.cshtml
@@ -16,7 +16,10 @@
   
   <li>@Html.ActionLink($"{pokemon.Species}", "Details", new { id = pokemon.PokemonId })</li>
 
+  <li>@Html.ActionLink($"{pokemon.ImageFight}", "Details", new { id = pokemon.PokemonId })</li>
+
 } 
+
 
 
 
