--- a/PokedexClient/Views/Shared/_Layout.cshtml
+++ b/PokedexClient/Views/Shared/_Layout.cshtml
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Pokedex</title>
     <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css'>
-    <link href="https://fonts.googleapis.com/css2?family=Yeseva+One&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Slackey&family=Yeseva+One&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="~/css/styles.css">
   </head>
   <body>
@@ -35,7 +35,7 @@
         <div class="col-md-5">
           <div class="container">
             <div class="card">
-              <div class="card-body">
+              <div class="card-body scroll">
                 @RenderBody()
               </div>
             </div>
