fixed apihelper so that details routes work
Co-authored-by: Taylor Phillips <taylorphillips133@gmail.com>
Co-authored-by: aesadin <aesadin@gmail.com>
Co-authored-by: Tristan Emmerson <tristan@stickerslug.com>
Co-authored-by: NoelKirkland <noelkirkland@gmail.com>

--- a/PokedexClient/Views/Pokemon/Details.cshtml
+++ b/PokedexClient/Views/Pokemon/Details.cshtml
@@ -7,6 +7,7 @@
 
 <h1>@Html.DisplayFor(model => model.Species) 's stats</h1>
 <!-- <h2>Type: @ViewBag.pokeTypeBag</h2> -->
+<!-- <h3>@Html.DisplayFor(pokeType => pokeType.PokemonId)</h3> -->
 <hr/>
 <img src="@Model.ImageMain" alt="@Model.Species">
 <img src="@Model.ImageSprite" alt="@Model.Species">
