--- a/PokedexClient/Views/Pokemon/Index.cshtml
+++ b/PokedexClient/Views/Pokemon/Index.cshtml
@@ -13,7 +13,8 @@
 }
 @foreach(Pokemon pokemon in Model)
 {
-  <li>@Html.ActionLink($"{pokemon.Species}", "Details", new { id = pokemon.PokemonId })</li>
+  <P><img src="@pokemon.ImageSprite" alt="@pokemon.Species"></p>
+  <P>@Html.ActionLink($"{pokemon.Species}", "Details", new { id = pokemon.PokemonId })</p>
 } 
 
 
