--- a/PokedexClient/Views/Shared/_Layout.cshtml
+++ b/PokedexClient/Views/Shared/_Layout.cshtml
@@ -16,9 +16,9 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
-          <li class="nav-item">
+          @* <li class="nav-item">   // Creates a Home Link in Navbar
             <a class="nav-link" href="/">Home<span class="sr-only">(current)</span></a>
-          </li>
+          </li> *@
           <li class="nav-item">
             <a class="nav-link" href="/Pokemon">Pokemon</a>
           </li>
@@ -32,7 +32,7 @@
       <div class="row">
         <div class="col-md-3">
         </div>
-        <div class="col-md-5">
+        <div class="col-md-6">
           <div class="container">
             <div class="card">
               <div class="card-body scroll">
