change pokemon species name display
Co-authored-by: Taylor Phillips <taylorphillips133@gmail.com>
Co-authored-by: aesadin <aesadin@gmail.com>
Co-authored-by: Tristan Emmerson <tristan@stickerslug.com>
Co-authored-by: NoelKirkland <noelkirkland@gmail.com>

--- a/PokedexClient/Views/PokeTypes/Details.cshtml
+++ b/PokedexClient/Views/PokeTypes/Details.cshtml
@@ -19,7 +19,7 @@ else
   <ul>
     @foreach (Pokemon pokemon in @Model.Pokemon)
     {
-      <li>@pokemon.Species</li>@* <li>@Html.ActionLink($"pokemon.Species", "Details", "Pokemon" new {id = @pokemon.PokemonId})</li> *@
+      <li>@Html.ActionLink($"{pokemon.Species}", "Details", "Pokemon", new {id = @pokemon.PokemonId})</li>
     }
   </ul>
 }
