add pokeball cursor and card styling
Co-authored-by: Taylor Phillips <taylorphillips133@gmail.com>
Co-authored-by: aesadin <aesadin@gmail.com>
Co-authored-by: Tristan Emmerson <tristan@stickerslug.com>
Co-authored-by: NoelKirkland <noelkirkland@gmail.com>

--- a/PokedexClient/Views/Shared/_Layout.cshtml
+++ b/PokedexClient/Views/Shared/_Layout.cshtml
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="~/css/styles.css">
   </head>
   <body>
+  <style type="text/css">* {cursor: url(https://cur.cursors-4u.net/games/gam-13/gam1282.cur), auto !important;}</style><a href="http://www.cursors-4u.com/cursor/2011/03/31/pokeball-pokemon.html" target="_blank" title="Pokeball - Pokemon"><img src="http://cur.cursors-4u.net/cursor.png" border="0" alt="Pokeball - Pokemon" style="position:absolute; top: 0px; right: 0px;" /></a>
     <div class="nav">
       <nav class="navbar navbar-expand-lg navbar-light">
       <a class="navbar-brand" href="/">Pokedex</a>
@@ -16,9 +17,6 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
-          @* <li class="nav-item">   // Creates a Home Link in Navbar
-            <a class="nav-link" href="/">Home<span class="sr-only">(current)</span></a>
-          </li> *@
           <li class="nav-item">
             <a class="nav-link" href="/Pokemon">Pokemon</a>
           </li>
