add cleaner styling for pokemon details page
Co-authored-by: Taylor Phillips <taylorphillips133@gmail.com>
Co-authored-by: aesadin <aesadin@gmail.com>
Co-authored-by: Tristan Emmerson <tristan@stickerslug.com>
Co-authored-by: NoelKirkland <noelkirkland@gmail.com>

--- a/PokedexClient/Views/Pokemon/Index.cshtml
+++ b/PokedexClient/Views/Pokemon/Index.cshtml
@@ -14,7 +14,7 @@
 @foreach(Pokemon pokemon in Model)
 {
   <P><img src="@pokemon.ImageSprite" alt="@pokemon.Species"></p>
-  <P>@Html.ActionLink($"{pokemon.Species}", "Details", new { id = pokemon.PokemonId })</p>
+  <P id="name">@Html.ActionLink($"{pokemon.Species}", "Details", new { id = pokemon.PokemonId })</p>
 } 
 
 
