--- a/PokedexClient/Views/Shared/_Layout.cshtml
+++ b/PokedexClient/Views/Shared/_Layout.cshtml
@@ -11,7 +11,7 @@
   <style type="text/css">* {cursor: url(https://cur.cursors-4u.net/games/gam-13/gam1282.cur), auto !important;}</style><a href="http://www.cursors-4u.com/cursor/2011/03/31/pokeball-pokemon.html" target="_blank" title="Pokeball - Pokemon"><img src="http://cur.cursors-4u.net/cursor.png" border="0" alt="Pokeball - Pokemon" style="position:absolute; top: 0px; right: 0px;" /></a>
     <div class="nav">
       <nav class="navbar navbar-expand-lg navbar-light">
-      <a class="navbar-brand" href="/">Pokedex</a>
+      <a class="navbar-brand header" href="/">Pokedex</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
