remove user from API file structure
Co-authored-by: aesadin <aesadin@gmail.com>
Co-authored-by: NoelKirkland <noelkirkland@gmail.com>
Co-authored-by: Taylor Phillips <taylorphillips133@gmail.com>
Co-authored-by: Tristan Emmerson <tristan@stickerslug.com>

--- a/PokedexClient/Views/Home/Index.cshtml
+++ b/PokedexClient/Views/Home/Index.cshtml
@@ -5,14 +5,5 @@
 <div class="homePage">
 <h1>Pokedex</h1><br>
 <hr>
-@if (User.Identity.IsAuthenticated)
-{
-  <p>@Html.ActionLink("View account", "Index", "Account")</p>
-  <p>@Html.ActionLink("See all Pokemon", "Index", "Pokemon", new {@class="link"})</p>
-  <p>@Html.ActionLink("See all Pokemon Types", "Index", "PokeTypes", new {@class="link"})</p>
-}
-else
-{
-  <p>@Html.ActionLink("Sign in/Sign up", "Index", "Account")</p>
-}
+<h1>this is our homepage content. Should be updated</h1>
 </div>
