added columns to pokemon index and updated user stories and removed card scroll bar
Co-authored-by: aesadin <aesadin@gmail.com>
Co-authored-by: NoelKirkland <noelkirkland@gmail.com>
Co-authored-by: Taylor Phillips <taylorphillips133@gmail.com>
Co-authored-by: Tristan Emmerson <tristan@stickerslug.com>

--- a/PokedexClient/Views/Home/Index.cshtml
+++ b/PokedexClient/Views/Home/Index.cshtml
@@ -3,7 +3,7 @@
 }
 
 <div class="homePage">
-<h1>Pokedex</h1><br>
+<h1>Pokédex</h1><br>
 <hr>
-<h1>this is our homepage content. Should be updated</h1>
+<img src="https://miro.medium.com/max/3840/1*bDWDIJlos-ROq31c55uRcA.jpeg" alt="pokéball" width="615" height="400">
 </div>
