--- a/PokedexClient/Views/PokeTypes/Details.cshtml
+++ b/PokedexClient/Views/PokeTypes/Details.cshtml
@@ -5,17 +5,17 @@
 @using PokedexClient.Models;
 @model PokedexClient.Models.PokeType
 
-<h1>@Html.DisplayNameFor(model => model.PokeTypeName): @Html.DisplayFor(model => model.PokeTypeName) -Type Details:</h1>   @*Ideally title should say (ex. "Fire-Type Details")*@
+<h1>@Html.DisplayFor(model => model.PokeTypeName) Type</h1>
 
 <hr/>
 
 @if(@Model.Pokemon.Count == 0)
 {
-  <p>There are no pokemon associated with this poketype!</p>
+  <p>There are no Pokémon associated with this Pokémon type!</p>
 }
 else
 {
-  <h3>Pokemon of this type:</h3>
+  <h3>Pokémon of this type:</h3>
   <ul>
     @foreach (Pokemon pokemon in @Model.Pokemon)
     {
