--- a/PokedexClient/Views/Shared/_Layout.cshtml
+++ b/PokedexClient/Views/Shared/_Layout.cshtml
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Pokedex</title>
+    <title>Pokédex</title>
     <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css'>
     <link href="https://fonts.googleapis.com/css2?family=VT323&family=Slackey&family=Freckle+Face&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="~/css/styles.css">
@@ -11,14 +11,14 @@
   <style type="text/css">* {cursor: url(https://cur.cursors-4u.net/games/gam-13/gam1282.cur), auto !important;}</style><a href="http://www.cursors-4u.com/cursor/2011/03/31/pokeball-pokemon.html" target="_blank" title="Pokeball - Pokemon"><img src="http://cur.cursors-4u.net/cursor.png" border="0" alt="Pokeball - Pokemon" style="position:absolute; top: 0px; right: 0px;" /></a>
     <div class="nav">
       <nav class="navbar navbar-expand-lg navbar-light">
-      <a class="navbar-brand header" href="/">Pokedex</a>
+      <a class="navbar-brand header" href="/">Pokédex</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item">
-            <a class="nav-link" href="/Pokemon">Pokemon</a>
+            <a class="nav-link" href="/Pokemon">Pokémon</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="/PokeTypes">Types</a>
