--- a/PokedexClient/Views/PokeTypes/Index.cshtml
+++ b/PokedexClient/Views/PokeTypes/Index.cshtml
@@ -5,11 +5,11 @@
 @using PokedexClient.Models;
 @model List<PokedexClient.Models.PokeType>;
 
-<h1>All PokeTypes</h1>
+<h1>All Pokémon Types</h1>
 <hr/>
 @if(@Model.Count == 0)
 {
-  <h3>No PokeTypes have been added yet!</h3>
+  <h3>No Pokémon Types have been added yet!</h3>
 }
 @foreach(PokeType pokeType in Model)
 {
