--- a/PokedexClient/Views/Pokemon/Index.cshtml
+++ b/PokedexClient/Views/Pokemon/Index.cshtml
@@ -5,18 +5,44 @@
 @using PokedexClient.Models;
 @model List<PokedexClient.Models.Pokemon>;
 
-<h1>All Pokemon</h1>
+<h1>All Pokémon</h1>
 <hr/>
 @if(@Model.Count == 0)
 {
-  <h3>No Pokemon have been added yet!</h3>
+  <h3>No Pokémon have been added yet!</h3>
 }
+<div class="row">
+<div class="col-md-4">
 @foreach(Pokemon pokemon in Model)
 {
+  if (pokemon.PokemonId <= 50)
+  {
   <P><img src="@pokemon.ImageSprite" alt="@pokemon.Species"></p>
   <P id="name">@Html.ActionLink($"{pokemon.Species}", "Details", new { id = pokemon.PokemonId })</p>
-} 
-
+  }
+}  
+</div>
+<div class="col-md-4">
+@foreach(Pokemon pokemon in Model)
+{
+  if (pokemon.PokemonId > 50 && pokemon.PokemonId <= 100)
+  {
+  <P><img src="@pokemon.ImageSprite" alt="@pokemon.Species"></p>
+  <P id="name">@Html.ActionLink($"{pokemon.Species}", "Details", new { id = pokemon.PokemonId })</p>
+  }
+}
+</div>
+<div class="col-md-4">
+@foreach(Pokemon pokemon in Model)
+{
+  if (pokemon.PokemonId > 100)
+  {
+  <P><img src="@pokemon.ImageSprite" alt="@pokemon.Species"></p>
+  <P id="name">@Html.ActionLink($"{pokemon.Species}", "Details", new { id = pokemon.PokemonId })</p>
+  }
+}
+</div>
+</div>
 
 
 
