--- a/PokedexClient/wwwroot/css/styles.css
+++ b/PokedexClient/wwwroot/css/styles.css
@@ -8,18 +8,24 @@ body {
   padding: 0;
   font-family: 'Freckle Face', cursive;
   text-shadow: 1px 2px 3px #757575;
+  font-size: 1.5rem;
 }
 
 .card {
-  margin-top: 2%;
+  margin-top: 1.5%;
   margin-bottom: 3%;
   padding: 2%;
-  background-color: rgba(245, 245, 245, 0.85);
+  background-color: rgba(245, 245, 245, 0.80);
   border-radius: 10px;
   box-shadow: 2px 4px 4.5px 5px rgb(51, 51, 51);
   max-height: 640px;
   overflow-y: scroll;
+  -ms-overlflow-style: none;
 }
+.card::-webkit-scrollbar {
+  display: none;
+}
+
 
 div#footer {
   position: fixed;
@@ -31,9 +37,6 @@ div#footer {
   text-align: left;
   color: whitesmoke;
 }
-h6  {
-  font-size: 10px;
-}
 
 h1  {
   font-family: 'Slackey', cursive;
@@ -42,6 +45,15 @@ h1  {
 }
 .header {
   font-size: 2rem;
+  text-decoration: overline;
+}
+
+h3  {
+  font-family: 'Freckle Face', cursive;
+}
+
+h6  {
+  font-size: 10px;
 }
 
 p {
