add proper weedle
Co-authored-by: aesadin <aesadin@gmail.com>
Co-authored-by: NoelKirkland <noelkirkland@gmail.com>
Co-authored-by: Taylor Phillips <taylorphillips133@gmail.com>
Co-authored-by: Tristan Emmerson <tristan@stickerslug.com>

--- a/PokedexClient/Views/Home/Index.cshtml
+++ b/PokedexClient/Views/Home/Index.cshtml
@@ -5,5 +5,5 @@
 <div class="homePage">
 <h1>Pokédex</h1><br>
 <hr>
-<img src="https://miro.medium.com/max/3840/1*bDWDIJlos-ROq31c55uRcA.jpeg" alt="pokéball" width="615" height="400">
+<img id="splash" src="https://miro.medium.com/max/3840/1*bDWDIJlos-ROq31c55uRcA.jpeg" alt="Ash&Pikachu" width="615" height="400">
 </div>
