final for team week
Co-authored-by: aesadin <aesadin@gmail.com>
Co-authored-by: NoelKirkland <noelkirkland@gmail.com>
Co-authored-by: Taylor Phillips <taylorphillips133@gmail.com>
Co-authored-by: Tristan Emmerson <tristan@stickerslug.com>

--- a/PokedexClient/Views/Home/Index.cshtml
+++ b/PokedexClient/Views/Home/Index.cshtml
@@ -1,9 +1,15 @@
 @{
-  Layout = "_Layout";
+  Layout = "_Splashpage";
 }
-
-<div class="homePage">
-<h1>Pokédex</h1><br>
-<hr>
-<img id="splash" src="https://miro.medium.com/max/3840/1*bDWDIJlos-ROq31c55uRcA.jpeg" alt="Ash&Pikachu" width="615" height="400">
+<div class="row">
+  <div class="col-sm-4">
+    <div>
+    <br><br><br><br>
+    <h1 id="homePage">Pokédex</h1>
+    <div>
+  </div>
+  <div class="col-sm-4">
+  </div>
+  <div class="col-sm-4">
+  </div>
 </div>
