--- a/PokedexClient/Views/Shared/_Splashpage.cshtml
+++ b/PokedexClient/Views/Shared/_Splashpage.cshtml
@@ -6,10 +6,8 @@
     <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css'>
     <link href="https://fonts.googleapis.com/css2?family=VT323&family=Slackey&family=Freckle+Face&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="~/css/styles.css">
-        <link rel="icon" type="image/png" href="https://coding-assets.s3-us-west-2.amazonaws.com/favicons/pokedex-favicon.png">
-
   </head>
-  <body class="layout">
+  <body class="splashPage">
   <style type="text/css">* {cursor: url(https://cur.cursors-4u.net/games/gam-13/gam1282.cur), auto !important;}</style><a href="http://www.cursors-4u.com/cursor/2011/03/31/pokeball-pokemon.html" target="_blank" title="Pokeball - Pokemon"><img src="http://cur.cursors-4u.net/cursor.png" border="0" alt="Pokeball - Pokemon" style="position:absolute; top: 0px; right: 0px;" /></a>
     <div class="nav">
       <nav class="navbar navbar-expand-lg navbar-light">
@@ -36,13 +34,7 @@
         <div class="col-md-3">
         </div>
         <div class="col-md-6">
-          <div class="container">
-            <div class="card">
-              <div class="card-body scroll">
-                @RenderBody()
-              </div>
-            </div>
-          </div>
+            @RenderBody()
         </div>
         <div class="col-md-3">
         </div>
@@ -53,3 +45,4 @@
     </div>
   </body>
 </html>
+
